Update to .NET 8, refactor code, and fix typos
Updated CI workflows and project files to use .NET 8.x.x.
Standardized boolean values in YAML files. Refactored
None.cs to improve readability. Added pragma directives
in Opt.cs to handle warnings. Corrected typos in
WrapExtensions.cs comments. Updated project files to
target .NET 8.0 and added Nerdbank.GitVersioning package.
Changed version in version.json to 2.0-alpha.

--- a/.github/workflows/ci-call.yml
+++ b/.github/workflows/ci-call.yml
@@ -11,7 +11,7 @@ on:
       dotnet-version:
         description: The dotnet version specifier
         type: string
-        default: 6.0.x
+        default: 6.x.x
         required: false
       dotnet-include-prerelease:
         description: Whether to include dotnet prerelease version
