Update CI workflows to use local files and standardize env
Updated `ci-dispatch.yml` and `dotnet.yml` to reference local workflow files instead of remote ones, reducing external dependencies. Changed `dotnet-include-prerelease` to `false` for stability. Standardized `runs-on` to `ubuntu-latest` for `build-windows` and `build-macos` jobs to simplify configuration.

--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -21,24 +21,24 @@ env:
 
 jobs:
   build-ubuntu:
-    uses: libanvl/uuid/.github/workflows/ci-call.yml@main
+    uses: ./.github/workflows/ci-call.yml
     with:
       runs-on: ubuntu-latest
       dotnet-version: 8.x.x
-      dotnet-include-prerelease: true
+      dotnet-include-prerelease: false
       package: true
   build-windows:
-    uses: libanvl/uuid/.github/workflows/ci-call.yml@main
+    uses: ./.github/workflows/ci-call.yml
     with:
       runs-on: ubuntu-latest
       dotnet-version: 8.x.x
-      dotnet-include-prerelease: true
+      dotnet-include-prerelease: false
   build-macos:
-    uses: libanvl/uuid/.github/workflows/ci-call.yml@main
+    uses: ./.github/workflows/ci-call.yml
     with:
       runs-on: ubuntu-latest
       dotnet-version: 8.x.x
-      dotnet-include-prerelease: true
+      dotnet-include-prerelease: false
 
   private-release:
     needs: build-ubuntu
