--- a/.github/workflows/ci-dispatch.yml
+++ b/.github/workflows/ci-dispatch.yml
@@ -45,7 +45,7 @@ jobs:
         GITHUB_CONTEXT: ${{ toJson(github) }}
       run: echo "$GITHUB_CONTEXT"
   call-ci:
-    uses: libanvl/uuid/.github/workflows/ci-call.yml@main
+    uses: ./.github/workflows/ci-call.yml
     with:
       runs-on: ${{ github.event.inputs.runs-on }}
       dotnet-version: ${{ github.event.inputs.dotnet-version }}
