--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -15,6 +15,7 @@ concurrency:
 
 env:
   DOTNET_SKIP_FIRST_TIME_EXPERIENCE: true
+  DOTNET_VERSION: 8.x.x
   GITHUB_FEED: https://nuget.pkg.github.com/libanvl/index.json
   GITHUB_USER: libanvl
   GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
@@ -24,21 +25,18 @@ jobs:
     uses: ./.github/workflows/ci-call.yml
     with:
       runs-on: ubuntu-latest
-      dotnet-version: 8.x.x
-      dotnet-include-prerelease: false
+      dotnet-version: ${{ env.DOTNET_VERSION }}
       package: true
   build-windows:
     uses: ./.github/workflows/ci-call.yml
     with:
       runs-on: ubuntu-latest
-      dotnet-version: 8.x.x
-      dotnet-include-prerelease: false
+      dotnet-version: ${{ env.DOTNET_VERSION }}
   build-macos:
     uses: ./.github/workflows/ci-call.yml
     with:
       runs-on: ubuntu-latest
-      dotnet-version: 8.x.x
-      dotnet-include-prerelease: false
+      dotnet-version: ${{ env.DOTNET_VERSION }}}}
 
   private-release:
     needs: build-ubuntu
@@ -46,11 +44,12 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Download Artifact
-        uses: actions/download-artifact@v4.1.7
+        uses: actions/download-artifact@v4
         with:
           name: nupkg
+          path: ./nupkg
       - name: Push to GitHub Feed
-        run: dotnet nuget push ./nupkg/*.nupkg --source ${GITHUB_FEED} --skip-duplicate --api-key ${GITHUB_TOKEN}
+        run: dotnet nuget push ./nupkg/*.nupkg --source ${{ env.GITHUB_FEED }} --skip-duplicate --api-key ${{ env.GITHUB_TOKEN }}
 
   draft-public-release:
     needs: build-ubuntu
