--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -57,15 +57,16 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Download Artifact
-        uses: actions/download-artifact@v4.1.7
+        uses: actions/download-artifact@v4
         with:
           name: nupkg
+          path: nupkg
       - name: Set Tag Version
         run: echo "TAG_VERSION=$(cat ./nupkg/version.txt)" >> $GITHUB_ENV
       - name: Draft Release
-        uses: softprops/action-gh-release@v0.1.13
+        uses: softprops/action-gh-release@v2
         with:
-          files: ./nupkg/*.nupkg
+          files: ./nupkg/*.*pkg
           draft: true
           target_commitish: ${{ env.GITHUB_REF }}
           tag_name: v${{ env.TAG_VERSION }}
