--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -59,14 +59,15 @@ jobs:
         uses: actions/download-artifact@v4
         with:
           name: nupkg
-          path: nupkg
+          path: ./nupkg
       - name: Set Tag Version
         run: echo "TAG_VERSION=$(cat ./nupkg/version.txt)" >> $GITHUB_ENV
       - name: Draft Release
         uses: softprops/action-gh-release@v2
         with:
-          files: ./nupkg/*.*pkg
+          files: ./nupkg/**/*.*
           draft: true
           target_commitish: ${{ env.GITHUB_REF }}
           tag_name: v${{ env.TAG_VERSION }}
           fail_on_unmatched_files: true
+          generate_release_notes: true
