--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -36,7 +36,7 @@ jobs:
       with:
         setCommonVars: true
       id: nbgv
-    - run: dotnet tool update -g docfx
+    - run: dotnet tool restore
     - run: dotnet docfx docfx/docfx.json
       name: 📚 Generate documentation
     - name: Upload artifact
