--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -26,7 +26,7 @@ jobs:
       runs-on: ubuntu-latest
       dotnet-version: 8.x.x
       package: true
-      upload-coverage: ${{ github.event_name == 'push' && github.ref == 'refs/heads/main' }}
+      upload-coverage: ${{  (github.ref == 'refs/heads/main' && github.event_name == 'push') || github.event_name == 'workflow_dispatch' }}
   build-windows:
     uses: ./.github/workflows/ci-call.yml
     with:
