Update workflow codecov-action

--- a/.github/workflows/ci-call.yml
+++ b/.github/workflows/ci-call.yml
@@ -87,4 +87,5 @@ jobs:
           verbose: true # optional (default = false)
         env:
           CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
