--- a/Directory.Packages.props
+++ b/Directory.Packages.props
@@ -5,13 +5,12 @@
     <CentralPackageTransitivePinningEnabled>true</CentralPackageTransitivePinningEnabled>
   </PropertyGroup>
   <ItemGroup>
+    <PackageVersion Include="coverlet.msbuild" Version="6.0.2" PrivateAssets="all" />
+    <PackageVersion Include="JunitXml.TestLogger" Version="5.0.0" PrivateAssets="all" />
     <PackageVersion Include="Microsoft.NET.Test.Sdk" Version="17.12.0" />
-    <PackageVersion Include="System.Memory" Version="4.6.0" />
     <PackageVersion Include="xunit" Version="2.9.2" />
     <PackageVersion Include="xunit.analyzers" Version="1.18.0" />
     <PackageVersion Include="xunit.runner.visualstudio" Version="3.0.0" PrivateAssets="all" />
-    <PackageVersion Include="coverlet.collector" Version="6.0.2" PrivateAssets="all" />
-    <PackageVersion Include="coverlet.msbuild" Version="6.0.2" PrivateAssets="all" />
   </ItemGroup>
   <ItemGroup>
     <GlobalPackageReference Include="Microsoft.SourceLink.GitHub" Version="8.0.0" PrivateAssets="all"/>
