--- a/Directory.Packages.props
+++ b/Directory.Packages.props
@@ -1,9 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <Project>
+
   <PropertyGroup>
     <ManagePackageVersionsCentrally>true</ManagePackageVersionsCentrally>
     <CentralPackageTransitivePinningEnabled>true</CentralPackageTransitivePinningEnabled>
   </PropertyGroup>
+
   <ItemGroup>
     <PackageVersion Include="coverlet.msbuild" Version="6.0.2" PrivateAssets="all" />
     <PackageVersion Include="JunitXml.TestLogger" Version="5.0.0" PrivateAssets="all" />
@@ -12,6 +14,10 @@
     <PackageVersion Include="xunit.analyzers" Version="1.18.0" />
     <PackageVersion Include="xunit.runner.visualstudio" Version="3.0.0" PrivateAssets="all" />
   </ItemGroup>
+
+  <ItemGroup>
+  </ItemGroup>
+
   <ItemGroup>
     <GlobalPackageReference Include="Microsoft.SourceLink.GitHub" Version="8.0.0" PrivateAssets="all"/>
     <GlobalPackageReference Include="CSharpIsNullAnalyzer" Version="0.1.593" />
@@ -19,4 +25,5 @@
     <GlobalPackageReference Include="Nerdbank.GitVersioning" Version="3.7.112" PrivateAssets="all" />
     <GlobalPackageReference Include="Nullable" Version="1.3.1" />
   </ItemGroup>
+
 </Project>
